--- a/src/main/resources/templates/board_category_view.html
+++ b/src/main/resources/templates/board_category_view.html
@@ -69,7 +69,7 @@ table.table table-hover td {
         <div class="col-sm-6">
 
             <div style="padding-bottom:30px;">
-                <h1>User만 글쓰기가 가능한 게시판</h1>
+                <h1>Category 모아보기</h1>
             </div>
             <div class="container">
                 <div class="row">
