--- a/src/main/resources/templates/top.html
+++ b/src/main/resources/templates/top.html
@@ -16,7 +16,7 @@
 <body>
 <div class="row">
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
-        <div class="container-fluid mt-3" style="align: left; vertical-align:center;">
+        <div class="container-fluid" style="align: left; vertical-align:center;">
             <ul class="navbar-nav col p-3">
                 <div style=" vertical-align:center;">
                     <a class="navbar-brand" href="#">
