--- a/src/main/resources/templates/board_in.html
+++ b/src/main/resources/templates/board_in.html
@@ -67,8 +67,12 @@ $('textarea:first').click(function(){
             <tr>
                 <th>카테고리</th>
                 <td>
+                    <!--
+                    <input type="text" class="form-control mt-3" name="bcategory" placeholder="태그 입력" />
+                    -->
                     <select class="form-select" style="font-size:15px;" id="bcategory" name="bcategory">
                         <option>==아래 선택하기==</option>
+                        <option>수다</option>
                         <option>게임</option>
                         <option>음악</option>
                         <option>공부</option>
@@ -76,7 +80,7 @@ $('textarea:first').click(function(){
                         <option>반려동물</option>
                         <option value="direct">직접입력</option>
                     </select>
-                    <input class="form-control mt-3" type="text" id="bcategoryDirect" name="bcategory"/>
+                    <input class="form-control mt-3" type="text" id="bcategoryDirect" name="bcategory" placeholder="입력 후 스페이스바"/>
                 </td>
             </tr>
             <tr>
