--- a/src/main/resources/templates/board_update.html
+++ b/src/main/resources/templates/board_update.html
@@ -84,7 +84,7 @@ $('textarea:first').click(function(){
             <tr>
                 <th style="vertical-align: middle;">첨부파일</th>
                 <td>
-                    <input type="file" name="bfile" class="form-control mt-3" th:value="${bfile}">
+                    <input type="file" name="bfile" class="form-control mt-3" th:value="${uploadfilename}">
                 </td>
             </tr>
             <tr>
