- HelloServiceImp의 findAll 오류 해결하기

--- a/src/main/resources/templates/board.html
+++ b/src/main/resources/templates/board.html
@@ -142,6 +142,7 @@ table.table table-hover td {
             </li>
         </ul>
     </div>
+</div>
 </body>
 <div th:replace="footer::footer"></div>
 
