--- a/src/main/resources/templates/top.html
+++ b/src/main/resources/templates/top.html
@@ -27,7 +27,7 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">게시판관리</a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="/welcome_board">회원가입 인사(ajax)</a></li>
+                            <li><a class="dropdown-item" href="/hello_board">회원가입 인사(ajax)</a></li>
                             <li><a class="dropdown-item" href="/board">게시판</a></li>
                             <li><a class="dropdown-item" href="#">A third link</a></li>
                         </ul>
